# construct-parser-serializer-generator

./: .gitignore  README.md  exampleFormat.c  exampleFormat.h  pyproject.toml
construct_psg/: __main__.py
construct_psg/containers/: Container.py
construct_psg/services/: CommandLineService.py  GeneratorService.py  LogService.py  ModuleLoaderService.py
construct_psg/templates/: Parser.c  Parser.frag  Parser.h  Parser.py
construct_psg/tests/: .gitignore  SimpleConstruct.py  test_SimpleConstruct.py
src/: tool.py
src/containers/: Container.py
src/services/: CaseConversionService.py  CommandLineService.py  GeneratorService.py  LogService.py  ModuleLoaderService.py
src/templates/: Parser.c  Parser.h  Parser.py
src/tests/: SimpleConstruct.py
